--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@ body {
   min-height: 100vh;
   font-family: 'Fira Sans', sans-serif;
   display: flex;
+  overflow: hidden;
 
 .blog-slider {
   width: 95%;
